# make-recognition-error

./: eval_model.py  noise.py  noise_livedoor.py  pyproject.toml  split_data.py  train.py  vis_loss_acc.py
utils/: customized_bce.py  error_detection_bert.py  fair_bce.py
